# leak-sheild-pro-2-0

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  VIVA_QA.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: security.yml
api/: _auditStore.js  _security.js  admin.js  scans.js
api/scans/: [id].js
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  cache.py  config.py  database.py  main.py  models.py  optional_ai.py  schemas.py  security.py
backend/app/api/: admin.py  routes.py
backend/app/engines/: __init__.py  education.py  explanation.py  risk.py
backend/app/engines/assessment/: __init__.py  website.py
backend/app/engines/detection/: __init__.py  rules.py  scanner.py
backend/app/services/: scan_service.py
backend/tests/: test_admin.py  test_api_security.py  test_assessment.py  test_detection.py  test_scan_service.py
docs/: architecture.md  leakshield-pro-jury-report.html  report.md  security-audit-2026-07-23.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AssessmentDashboard.jsx  KnowledgeBase.jsx
frontend/src/data/: knowledge.js
samples/: sample_leak.txt  sample_response.json
scripts/: generate-jury-report.js
tests/: api.test.js
